Fix layout issue in the question and answeroption preview

--- a/arsnova.click/client/layout/view_answeroptions/styles/create_answer_options.scss
+++ b/arsnova.click/client/layout/view_answeroptions/styles/create_answer_options.scss
@@ -174,8 +174,8 @@
 	#markdownPreviewWrapper {
 		position: absolute;
 		top: calc(6.8vh + 10px);
-		padding: 0 10px;
-		width: 97%;
+		margin: 0 10px;
+		width: 95%;
 		height: calc(100% - 3.1% - 11vh);
 		overflow-y: auto;
 		overflow-x: hidden;
